2014-03-31  Raphael Kubo da Costa  <raphael.kubo.da.costa@intel.com>

        [CMake][GTK] Do not expand variables twice in if() checks.
        https://bugs.webkit.org/show_bug.cgi?id=130964

        Reviewed by Martin Robinson.

        In CMake, `if (${foo})' causes $foo to be evaluated first and its value
        to be checked by the if clause. This is not what we want, and
        configuration fails when, say, GLX support wasn't found as the if
        clause is actually evaluated as `if (TRUE AND (OR TRUE))'.

        * Source/cmake/OptionsGTK.cmake: Pass if (FOO) instead of if (${FOO})
        where necessary.

2014-03-31  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Remove scripts code only applicable to autotools
        https://bugs.webkit.org/show_bug.cgi?id=130841

        Reviewed by Anders Carlsson.

        * Source/cmake/WebKitPackaging.cmake: No longer need to consider autotools files.

2014-03-31  Martin Robinson  <mrobinson@igalia.com>

        [GTK] Use PROJECT_VERSION_* instead of WEBKIT_*_VERSION
        https://bugs.webkit.org/show_bug.cgi?id=130936

        Reviewed by Carlos Garcia Campos.

        * Source/cmake/OptionsGTK.cmake: No longer emulate the Autotools macro names.

2014-03-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add support for GTK3 plugins
        https://bugs.webkit.org/show_bug.cgi?id=130599

        Reviewed by Martin Robinson.

        * Source/cmake/OptionsGTK.cmake:

2014-03-28  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [EFL] Bump glib version from 2.36 to 2.38 
        https://bugs.webkit.org/show_bug.cgi?id=130886

        Reviewed by Csaba Osztrogonác.

        * Source/cmake/OptionsEfl.cmake: Required glib-2.38 version.

2014-03-26  Zoltan Horvath  <zoltan@webkit.org>

        [CSS Shapes] Remove shape-inside support
        https://bugs.webkit.org/show_bug.cgi?id=130698

        Reviewed by David Hyatt.

        * Source/cmake/WebKitFeatures.cmake: