@@ -182,9 +182,13 @@ list(APPEND WebCore_SOURCES
     platform/text/enchant/TextCheckerEnchant.cpp
 )
 
-if (ENABLE_BATTERY_STATUS)
+if (ENABLE_BATTERY_STATUS OR (EFL_REQUIRED_VERSION VERSION_LESS 1.8))
     list(APPEND WebCore_INCLUDE_DIRECTORIES ${DBUS_INCLUDE_DIRS})
+    list(APPEND WebCore_INCLUDE_DIRECTORIES ${E_DBUS_INCLUDE_DIRS})
+    list(APPEND WebCore_INCLUDE_DIRECTORIES ${E_DBUS_EUKIT_INCLUDE_DIRS})
     list(APPEND WebCore_LIBRARIES ${DBUS_LIBRARIES})
+    list(APPEND WebCore_LIBRARIES ${E_DBUS_LIBRARIES})
+    list(APPEND WebCore_LIBRARIES ${E_DBUS_EUKIT_LIBRARIES})
 endif ()
 
 if (ENABLE_NETSCAPE_PLUGIN_API)
@@ -218,8 +222,6 @@ list(APPEND WebCore_LIBRARIES
     ${EINA_LIBRARIES}
     ${EO_LIBRARIES}
     ${EVAS_LIBRARIES}
-    ${E_DBUS_EUKIT_LIBRARIES}
-    ${E_DBUS_LIBRARIES}
     ${FONTCONFIG_LIBRARIES}
     ${FREETYPE2_LIBRARIES}
     ${GLIB_GIO_LIBRARIES}
@@ -242,8 +244,6 @@ list(APPEND WebCore_INCLUDE_DIRECTORIES
     ${ECORE_FILE_INCLUDE_DIRS}
     ${ECORE_X_INCLUDE_DIRS}
     ${EO_INCLUDE_DIRS}
-    ${E_DBUS_INCLUDE_DIRS}
-    ${E_DBUS_EUKIT_INCLUDE_DIRS}
     ${EDJE_INCLUDE_DIRS}
     ${EEZE_INCLUDE_DIRS}
     ${EINA_INCLUDE_DIRS}
