@@ -169,7 +169,7 @@ if (ENABLE_WEBKIT2 AND ENABLE_NETSCAPE_PLUGIN_API)
     set(ENABLE_PLUGIN_PROCESS 1)
 endif ()
 
-if (ENABLE_BATTERY_STATUS)
+if (ENABLE_BATTERY_STATUS OR (EFL_REQUIRED_VERSION VERSION_LESS 1.8))
     find_package(DBus REQUIRED)
     find_package(E_DBus 1.7 COMPONENTS EUKit)
 endif ()
